syntax = "proto3";
 
package KissU.Msm.Sample.Service.Contracts;
 
// The greeting service definition.
service Greeter {
	// Sends a greeting
	rpc SayHelloAsync (HelloRequest) returns (HelloReply) {}
}
 
// The request message containing the user's name.
message HelloRequest {
	string name = 1;
}
 
// The response message containing the greetings.
message HelloReply {
	string message = 1;
}